# my-one-password

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: android.yml  release.yml
apps/api/: package.json  wrangler.toml
apps/api/src/: index.ts
apps/api/src/db/: schema.sql
apps/api/src/lib/: crypto.ts  session.ts
apps/api/src/middleware/: auth-guard.ts  rate-limit.ts  security-headers.ts
apps/api/src/routes/: auth.ts  sync.ts  vault.ts
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/capabilities/: desktop.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/: _headers  manifest.json  offline.html
apps/web/src/: App.tsx  app.css  main.tsx
apps/web/src/components/: NativeUpdatePrompt.tsx  PWAUpdatePrompt.tsx  PasswordGenerator.tsx  TOTPDisplay.tsx
apps/web/src/hooks/: useAutoLock.ts  useMediaQuery.ts  useNativeUpdater.ts  usePWA.ts
apps/web/src/lib/: backup.ts  clipboard.ts  emergency-kit.ts  encoding.ts  i18n.ts  offline-auth-cache.ts  offline-cache.ts  onepassword-import.ts  password-generator.ts  password-health.ts  password-strength.ts  secret-key.ts  sync.ts  totp.ts
apps/web/src/pages/: BackupPage.tsx  ImportPage.tsx  ItemDetailPage.tsx  ItemFormPage.tsx  LoginPage.tsx  PasswordHealthPage.tsx  UnlockPage.tsx  VaultPage.tsx
apps/web/src/services/: api.ts  auth.ts  vault.ts
apps/web/src/stores/: auth-store.ts  theme-store.ts  vault-store.ts
apps/web/src/styles/: design.css
docs/: IMPLEMENTATION_PLAN.md
(+9 files in other folders)
